--- a/Seguridad/Seguridad/Web.config
+++ b/Seguridad/Seguridad/Web.config
@@ -4,6 +4,29 @@
   https://go.microsoft.com/fwlink/?LinkId=169433
   -->
 <configuration>
+  <configSections>
+    <!-- NHibernate Section -->
+    <section name="hibernate-configuration" type="NHibernate.Cfg.ConfigurationSectionHandler,NHibernate" />
+    <!-- Log4Net Section -->
+    <section name="log4net" type="log4net.Config.Log4NetConfigurationSectionHandler, log4net" />
+  </configSections>
+  <hibernate-configuration xmlns="urn:nhibernate-configuration-2.2">
+    <session-factory>
+      <property name="connection.provider">
+        NHibernate.Connection.DriverConnectionProvider
+      </property>
+      <property name="dialect">
+        NHibernate.Dialect.MsSql2005Dialect
+      </property>
+      <property name="connection.driver_class">
+        NHibernate.Driver.SqlClientDriver
+      </property>
+      <property name="connection.connection_string">
+        Data Source=173.248.151.67,1533;Initial Catalog=dm;Persist Security Info=True;User ID=sa_dm;Password=danger2018;Pooling=False
+        <!--Data Source=DESKTOP-9T5DHIO\IRAD2;Initial Catalog=DBRISLABCENTRALPRO;Persist Security Info=True;User ID=sa;Password=irad2015;Pooling=False-->
+      </property>
+    </session-factory>
+  </hibernate-configuration>
   <system.web>
     <pages buffer="true" enableEventValidation="true" />
     <compilation debug="true" targetFramework="4.5">
