--- a/Seguridad/Seguridad.Data/Seguridad.Data.csproj
+++ b/Seguridad/Seguridad.Data/Seguridad.Data.csproj
@@ -46,11 +46,14 @@
     <Reference Include="System.Configuration" />
     <Reference Include="System.ServiceModel" />
     <Reference Include="System.Transactions" />
+    <Reference Include="MYR.Common">
+      <HintPath>..\..\..\..\Desktop\MYR.Common.dll</HintPath>
+    </Reference>
   </ItemGroup>
   <ItemGroup>
     <Compile Include="MyClass.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Base\DBBase.cs" />
+    <Compile Include="Model\Usuario.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
@@ -59,6 +62,7 @@
   <ItemGroup>
     <Folder Include="Base\" />
     <Folder Include="Assembly\" />
+    <Folder Include="Model\" />
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
 </Project>
